Fixed spacing between sections, added header to table div

--- a/main.css
+++ b/main.css
@@ -118,13 +118,14 @@ section {
 	max-width: 1024px;
 	width: 100%;
 	padding: 0;
+	margin: 0 0 2rem 0;
 }
 
 section:first-of-type {
 	padding-top: 80px;
 }
 
-section > h1 {
+section > h1, .table > h1 {
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -138,7 +139,7 @@ section > h1 {
 	top: 56px;
 }
 
-section > h1 > svg {
+h1 > svg {
 	width: 1em;
 	height: 1em;
 	fill: #fff;
@@ -156,7 +157,7 @@ section > h1 > svg {
 .map_list {
 	background: #545454;
 	border-radius: 5px;
-	margin: 0 0 2rem 0;
+	margin: 0 0 1rem 0;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
   	width: 23%;
@@ -269,9 +270,16 @@ p.map_date {
 	border-radius: 10px;
 	border-top-right-radius: 0;
 	border-top-left-radius: 0;
-	/*border: 1px solid #1d1d1d4f;*/
-	margin: 0 0 1rem 0;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+.table:hover {
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.table > h1 {
+	box-shadow: none;
 }
 
 .theaders {
